--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "fs": "0.0.1-security",
     "koa": "^2.8.2",
     "koa-body": "^4.1.1",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "markdown-it": "^10.0.0"
   }
 }
