--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "markdown-it": "^10.0.0"
+    "markdown-it": "^10.0.0",
+    "mongoose": "^5.9.14"
   }
 }
