--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
   },
   "homepage": "https://github.com/asd153866714/ws108a#readme",
   "dependencies": {
+    "ejs": "^3.1.3",
     "fs": "0.0.1-security",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "koa": "^2.8.2",
     "koa-body": "^4.1.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
+    "koa-session": "^6.0.0",
     "koa-static": "^5.0.0",
+    "koa-views": "^6.2.2",
     "markdown-it": "^10.0.0",
-    "mongoose": "^5.9.14"
+    "mongoose": "^5.9.14",
+    "soket.io": "0.0.1-security"
   }
 }
