--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
     "koa-markdown": "^2.0.2",
+    "koa-passport": "^4.1.3",
     "koa-router": "^7.4.0",
     "koa-session": "^6.0.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.2",
     "markdown-it": "^10.0.0",
     "mongoose": "^5.9.14",
+    "nodemon": "^2.0.4",
     "pm2": "^4.4.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "sqlite3": "^4.2.0",
+    "tedious": "^8.3.0",
+    "unirest": "^0.6.0"
   }
 }
